# my_qq

./: CMakeLists.txt  README.md  build.sh  client_qq  server_qq
my_utils/: CMakeLists.txt  list.h  main.c  my_socket.c  my_socket.h  qq_msg.c  qq_msg.h
qq_client/: CMakeLists.txt  qq_client.c
qq_server/: CMakeLists.txt  qq_server.c
